Closed Bug 379419 Opened 17 years ago Closed 17 years ago

"ASSERTION: Non-border-colors case with borderColorStyleCount < 1 or > 3; what happened?" with <thead style="display: block;">

Categories

(Core :: Layout: Tables, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jruderman, Assigned: vlad)

References

Details

(Keywords: assertion, regression, testcase)

Attachments

(2 files)

Attached file testcase
###!!! ASSERTION: Non-border-colors case with borderColorStyleCount < 1 or > 3; what happened?: 'Error', file /Users/jruderman/trunk/mozilla/layout/base/nsCSSRendering.cpp, line 1835

I'm guessing this is due to bug 368247, since the assertion was added there.
The style system is passing down NS_STYLE_BORDER_STYLE_RULES_MARKER | NS_STYLE_BORDER_STYLE_SOLID -- I'm not sure how/why STYLE_RULES_MARKER is making it down this far.  The old border code doesn't seem to have handled this at all; should I just ignore if STYLE_RULES_MARKER is set?
STYLE_RULES_MARKER is doomed, its a ugly hack to get border collapse right. Why this is visible at all in a non BC case is beyond me. In short the fix in bug 43178 opens the road to remove this.
Do I just ignore any requests to paint with STYLE_RULES_MARKER set?  Or do I mask it out and paint as normal?
I believe you should: mask it out and paint as normal
Seems worth investigating why it's getting through, if it wasn't before.
It looks like it was getting through before -- the switch statement in the old DrawSide just didn't handle any border styles that had STYLE_RULES_MARKER or'd in, and so nothing got drawn.

I'm going to take that approach as well, and just ignore any side that has STYLE_RULES_MARKER.
Here's the patch to just ignore anything with STYLE_RULES_MARKER set.
Assignee: nobody → vladimir
Status: NEW → ASSIGNED
Attachment #264404 - Flags: review?(dbaron)
Comment on attachment 264404 [details] [diff] [review]
ignore borders with style_rules flag

r+sr=dbaron
Attachment #264404 - Flags: superreview+
Attachment #264404 - Flags: review?(dbaron)
Attachment #264404 - Flags: review+
Checked in.
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Flags: in-testsuite?
Crashtest checked in.
Flags: in-testsuite? → in-testsuite+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: