b=379419, bogus assertion in border code with NS_STYLE_BORDER_RULES_MARKER, r+sr=dbaron